--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
     "aurelia-plugins-pagination": "^2.6.1",
     "aurelia-polyfills": "^1.3.0",
     "babel-polyfill": "^6.26.0",
-    "bluebird": "^3.5.1"
+    "bluebird": "^3.5.1",
+    "bootstrap4": "0.0.1-security",
+    "jquery": "^3.3.1",
+    "popper.js": "^1.14.3"
   },
   "peerDependencies": {},
   "devDependencies": {
